--- a/style.css
+++ b/style.css
@@ -2,6 +2,25 @@ body {
     margin: 0;
 }
 
+.header {
+    background: url("./assets/hero.PNG") no-repeat;
+    width: 100%;
+    height: 100%;
+    background-position: unset;
+}
+
+@media screen and (max-width: 790px) {
+    .header {
+        background-position: top;
+    }
+}
+
+.section-title {
+    font-family: "Fjalla One", sans-serif;
+    font-size: 30px;
+    color: black;
+}
+
 .main {
     margin: auto;
     text-align: center;
@@ -16,7 +35,6 @@ body {
     height: auto;
     width: 100%;
     padding: 20px 0;
-    background: green;
 }
 
 #mission {
@@ -36,8 +54,8 @@ body {
 }
 
 .member {
-    height: 300px;
-    width: 200px;
+    height: 400px;
+    width: 300px;
     background: purple;
     margin: 30px;
 }
