--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 #mission {
     height: 500px;
     padding: 30px 20%;
+    background: gray;
     /* background: red; */
     /* position: relative;
     top: -100px; */
@@ -70,28 +71,25 @@ body {
     margin: auto;
     padding: 30px 20%;
     /* width: 80%; */
-    background: gray;
 }
 
 .product {
     height: 300px;
     width: 100%;
-    background: gray;
     opacity: 0.8;
     margin: auto;
-    color: white;
+    color: black;
 }
 
 #service {
     padding: 30px 20%;
     text-align: center;
     margin: 100px 0;
-    background: gray;
 }
 
 #members {
-    margin: 20px;
     padding: 30px 20%;
+    background: gray;
 }
 
 .slogan {
@@ -107,4 +105,25 @@ body {
 .contact-form {
     margin: 50px 0;
     padding: 0 20%;
+}
+
+.about-items {
+    margin: 30px 20%;
+}
+
+.about-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 50px 0;
+}
+
+#about-us {
+    padding: 30px 20%;
+    margin: 30px 0;
+    text-align: center;
+}
+
+.about-title {
+    font-weight: 600;
 }
