--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
 }
 
 .product {
-    height: 300px;
+    height: 100px;
     width: 100%;
     opacity: 0.8;
     margin: auto;
@@ -84,7 +84,7 @@ body {
 #service {
     padding: 30px 20%;
     text-align: center;
-    margin: 100px 0;
+    margin: 50px 0;
 }
 
 #members {
@@ -98,8 +98,18 @@ body {
     color: black;
 }
 
+.about-name {
+    width: 50%;
+    text-align: start;
+}
+
+.about-desc {
+    width: 50%;
+    text-align: start;
+}
+
 .product>p {
-    margin: 300px auto;
+    margin: 100px auto;
 }
 
 .contact-form {
@@ -108,13 +118,13 @@ body {
 }
 
 .about-items {
-    margin: 30px 20%;
+    /* margin: 30px 20%; */
 }
 
 .about-item {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     margin: 50px 0;
 }
 
